# linkit

./: CMakeLists.txt  README.md  library.h
include/linkit/: linkit.h  matrix3.h  matrix4.h  precision.h  quaternion.h  utils.h  vector3.h  vector4.h
tests/: test_main.cpp
